--- a/app/src/main/res/layout/activity_mode_of_transport.xml
+++ b/app/src/main/res/layout/activity_mode_of_transport.xml
@@ -85,6 +85,7 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button"
+        android:clickable="false"
         android:layout_below="@+id/radio_group"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
