--- a/app/src/main/res/layout/extras_layout.xml
+++ b/app/src/main/res/layout/extras_layout.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="vertical"
-                android:layout_weight="3">
+                android:layout_weight="0.33">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -50,6 +50,24 @@
 
                 <ProgressBar
                     android:id="@+id/lightmeter"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:max="100"
+                    android:padding="20dp"
+                    android:progress="0" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:weightSum="1">
+
+                <ProgressBar
+                    android:id="@+id/soundmeter"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
