--- a/app/src/main/res/layout/extras_layout.xml
+++ b/app/src/main/res/layout/extras_layout.xml
@@ -517,7 +517,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:text="Normal Rd"
+                    android:text="Bus Stop"
                     android:id="@+id/btnLM11" />
 
             </LinearLayout>
@@ -532,7 +532,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:id="@+id/imgLM13"
-                    android:src="@drawable/btn_dummy0"/>
+                    android:src="@drawable/btn_busyroad0"/>
 
                 <Button
                     android:layout_width="0dp"
